--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             >
           </div>
         </div>
-        <div class="col-lg-6 d-flex align-items-center justify-content-center">
+        <div class="col-lg-6 d-flex align-items-center justify-content-center ">
           <img src="img/mev3.png" alt="" class="pic" />
         </div>
       </div>
@@ -140,47 +140,52 @@
       <br />
       <div class="row">
         <div class="col-lg-4 col-sm-12 mb-3 text-center">
-          <h3 class="text-center">Fontend</h3>
+          <h3 class="text-center my-5">Fontend</h3>
           <div class="container mt-3">
             <img src="img/react.png" alt="" style="width: 100px" class="m-3" />
             <img src="img/html.png" alt="" style="width: 100px" class="m-3" />
             <img src="img/css1.png" alt="" style="width: 100px" class="m-3" />
-            <img src="img/download.png" alt="" style="width: 100px" class="m-3" />
+            <img
+              src="img/download.png"
+              alt=""
+              style="width: 100px"
+              class="m-3"
+            />
             <img src="img/boot1.png" alt="" style="width: 100px" class="m-3" />
-
           </div>
         </div>
         <div class="col-lg-4 col-sm-12 mb-3 text-center">
-          <h3 class="text-center">Backend</h3>
+          <h3 class="text-center my-5">Backend</h3>
 
           <div class="container mt-3">
             <img src="img/nodejs.png" alt="" style="width: 100px" class="m-3" />
             <img src="img/php.png" alt="" style="width: 100px" class="m-3" />
-            
-
           </div>
         </div>
         <div class="col-lg-4 col-sm-12 text-center">
-          <h3 class="text-center">Database</h3>
+          <h3 class="text-center my-5">Database</h3>
           <div class="container mt-3">
             <img src="img/mon.png" alt="" style="width: 100px" class="m-3" />
-            <img src="img/myadmin.png" alt="" style="width: 100px" class="m-3" />
-
+            <img
+              src="img/myadmin.png"
+              alt=""
+              style="width: 100px"
+              class="m-3"
+            />
           </div>
         </div>
         <div class="col-lg-12 col-sm-12 text-center">
-          <h3 class="text-center">Other</h3>
+          <h3 class="text-center my-5">Other</h3>
           <div class="container mt-3">
             <img src="img/figma1.png" alt="" style="width: 100px" class="m-3" />
-           
           </div>
         </div>
       </div>
     </div>
 
-    <br>
-    <hr>
-    <br>
+    <br />
+    <hr />
+    <br />
     <!-- My Project -->
     <div class="container" style="height: auto" id="myproject">
       <div class="row">
