add header icon , edit cv

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phu-Dev Portfoilo</title>
-
+    <link rel="icon" type="image/x-icon" href="img/internet.png">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -107,10 +107,19 @@
           class="col-lg-6 col-sm-12 d-flex flex-column align-items-center justify-content-center"
         >
           <p class="text-center">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus,
-            rerum quam reiciendis tempora quo ducimus velit a beatae, qui, earum
-            eos impedit! Sapiente ipsam voluptatum, dolores autem repudiandae
-            explicabo cumque.
+            My name is Phuwanat Pluaynongkhae,
+            I am an internship student from Mahasarakham University, Faculty of
+            Informatics, with a strong passion for web and application
+            development. I have hands-on experience in both frontend and backend
+            technologies, including HTML, CSS, JavaScript, Bootstrap, Tailwind
+            CSS, React, and Node.js. My backend and database skills span PHP,
+            MongoDB, Firebase, PhpMyAdmin, and Docker, enabling me to build
+            full-stack web applications with responsive and user-friendly
+            designs. Additionally, I am familiar with UI/UX design tools like
+            Figma, and I constantly seek to improve my skills by learning new
+            frameworks and tools. I am a responsible and adaptable team player
+            who is eager to take on new challenges and contribute to
+            collaborative projects.
           </p>
         </div>
       </div>
@@ -391,7 +400,6 @@
       </div>
     </div>
 
-   
     <script src="script/index.js"></script>
   </body>
 </html>
