--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <!-- Navbar -->
-   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark animate__animated animate__fadeInDown">
   <div class="container">
     <a class="navbar-brand" href="index.html">Phu-Dev</a>
     <button
@@ -118,7 +118,7 @@
           <div class="underlineT autoShow"></div>
         </div>
         <div
-          class="col-lg-6 d-flex flex-column align-items-center justify-content-center"
+          class="col-lg-6 d-flex flex-column align-items-center justify-content-center fadeLeft"
         >
           <img
             src="img/g01.png"
@@ -127,7 +127,7 @@
           />
         </div>
         <div
-          class="col-lg-6 col-sm-12 d-flex flex-column align-items-center justify-content-center"
+          class="col-lg-6 col-sm-12 d-flex flex-column align-items-center justify-content-center fadeRight"
         >
           <p class="text-center autoShow">
            My name is Phuwanat Plueaynongkhae,<br> an internship student from Mahasarakham University, Faculty of Informatics, with a strong passion for web and application development
